localStorage setItem fot todoTasks in an arr

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h3>What Needs to be Done?</h3>
     <input id="todo-item" placeholder="Enter tasks">
     <button id="submit-item">Submit</button>
-    <h5 id="total-tasks">Tasks to Complete:</h5>
+    <h5 id="task-no">Tasks to Complete:</h5>
 
 
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script> 
