added linked new html tags

--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
 <body>
     <h1> Todo List</h1>
     <h3>What Needs to be Done?</h3>
-    <input id="todo-item" placeholder="Enter tasks">
+    <input type="text" id="todo-input" placeholder="Enter tasks">
     <button id="submit-item">Submit</button>
     <h5 id="task-no">Tasks to Complete:</h5>
+    <ul id="ul">
+        <li>
+            <span id="liTask">Get Cat Food</span>
+            <button id="complete">Complete</button>
+        </li>
+    </ul>
 
 
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script> 
