keydown working with enter

--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
 </head>
 <body>
     <h1> Todo List</h1>
-    <h3>What Needs to be Done?</h3>
     <input type="text" id="todo-input" placeholder="Enter tasks">
-    <button id="submit-item">Submit</button>
+    <!-- <button id="submit-item">Submit</button> -->
     <h5 id="task-no">Tasks to Complete:</h5>
-    <ul id="ul">
-        <li>
+    <ul id="output">
+        <!-- <li>
             <span id="liTask">Get Cat Food</span>
             <button id="complete">Complete</button>
-        </li>
+        </li> -->
     </ul>
 
 
